--- a/imp_examples.ipynb
+++ b/imp_examples.ipynb
@@ -364,10 +364,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "id": "champion-water",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'platform': 'Windows',\n",
+       " 'platform-release': '10',\n",
+       " 'platform-version': '10.0.22000',\n",
+       " 'architecture': 'AMD64',\n",
+       " 'hostname': 'DESKTOP-F726TKR',\n",
+       " 'ip-address': '192.168.68.103',\n",
+       " 'mac-address': '44:8a:5b:b6:3f:dd',\n",
+       " 'processor': 'Intel64 Family 6 Model 60 Stepping 3, GenuineIntel',\n",
+       " 'ram': '8 GB'}"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import platform,socket,re,uuid,json,psutil,logging\n",
     "\n",
@@ -639,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "9143d916",
+   "id": "f2aab9bb",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bad0c4df",
+   "id": "810b76f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -676,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82041686",
+   "id": "c3d281f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "a7cf615e",
+   "id": "79efc192",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed849b80",
+   "id": "4211115d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -765,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "43765829",
+   "id": "90a505a8",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "b32a2cb3",
+   "id": "20314cb7",
    "metadata": {},
    "outputs": [
     {
@@ -839,42 +858,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8115c1a5",
+   "id": "6abed6db",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "e2e86704",
+   "execution_count": 186,
+   "id": "27043c4a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter equation to solve : 5+2\n"
+      "Enter equation to solve : 5+2*9/2\n"
      ]
     }
    ],
    "source": [
-    "eqn = input('Enter equation to solve : ')"
+    "eqn = eval(input('Enter equation to solve : '))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "937bb60e",
+   "execution_count": 187,
+   "id": "8d74a830",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'5+2'"
+       "14.0"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +905,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f09c54",
+   "id": "bad8fd33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb7af537",
+   "metadata": {},
+   "source": [
+    "1\n",
+    "22\n",
+    "333\n",
+    "4444\n",
+    "55555\n",
+    "\n",
+    "Can you do it using only arithmetic operations, a single for loop and print statement?\n",
+    "\n",
+    "Use no more than two lines. The first line (the for statement) is already written for you. You have to complete the print statement.\n",
+    "\n",
+    "Note: Using anything related to strings will give a score of ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "68622bc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n",
+      "22\n",
+      "333\n",
+      "4444\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,int(input())):\n",
+    "    print([0, 1, 22, 333, 4444, 55555, 666666, 7777777, 88888888, 999999999][i]) # funny solution\n",
+    "#     print(10**i//9*i) # actual solution\n",
+    "#     print(str(i)*i) # illegal solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bdb5da4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -894,15 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d09915d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75c4534d",
+   "id": "d8ff4bd1",
    "metadata": {},
    "outputs": [],
    "source": []
